fixed x overflow

--- a/styles/primary.css
+++ b/styles/primary.css
@@ -35,6 +35,7 @@ body {
 
 
 .main-container {
+  overflow-x: hidden;
   position: relative;
   padding: 20px 30px 20px 30px;
   width: 100%;
